update key pusher

--- a/index.html
+++ b/index.html
@@ -48,91 +48,95 @@
     });
 
     render();
+  })
+
+  channel.bind('pusher:member_added', (member) => {
+    users.push(member.id)
+    render();
+  });
+
+  channel.bind('pusher:member_removed', (member) => {
+    // for remove member from list:
+    var index = users.indexOf(member.id);
+    users.splice(index, 1);
+    if (member.id == room) {
+      endCall();
+    }
+    render();
+  });
+
+  function render() {
+    var list = '';
+    users.forEach(function (user) {
+      list += `<li>` + user + ` <input type="button" style="float:right;"  value="Call" onclick="callUser('` + user + `')" id="makeCall" /></li>`
     })
+    document.getElementById('users').innerHTML = list;
+  }
 
-    channel.bind('pusher:member_added', (member) => {
-        users.push(member.id)
-        render();
+  //To iron over browser implementation anomalies like prefixes
+  GetRTCPeerConnection();
+  GetRTCSessionDescription();
+  GetRTCIceCandidate();
+  prepareCaller();
+
+  function prepareCaller() {
+    //Initializing a peer connection
+    caller = new window.RTCPeerConnection();
+    //Listen for ICE Candidates and send them to remote peers
+    caller.onicecandidate = function (evt) {
+      if (!evt.candidate) return;
+      console.log("onicecandidate called");
+      onIceCandidate(caller, evt);
+    };
+
+    // onaddstream handler to receive remote feed and show in remoteview video element
+
+    caller.onaddstream = function (evt) {
+      console.log("onaddstream called");
+      if (window.URL) {
+        document.getElementById("remoteview").srcObject = evt.stream;
+      } else {
+        document.getElementById("remoteview").src = evt.stream;
+      }
+    };
+  }
+
+  function getCam() {
+    //Get local audio/video feed and show it in selfview video element
+    return navigator.mediaDevices.getUserMedia({
+      video: true,
+      audio: false
     });
+  }
 
-    channel.bind('pusher:member_removed', (member) => {
-        // for remove member from list:
-        var index = users.indexOf(member.id);
-        users.splice(index, 1);
-        if(member.id==room){
-            endCall();
-        }
-        render();
-    });
+  function GetRTCIceCandidate() {
+    window.RTCIceCandidate = window.RTCIceCandidate || window.webkitRTCIceCandidate ||
+      window.mozRTCIceCandidate || window.msRTCIceCandidate;
 
-    function render() {
-        var list = '';
-        users.forEach(function(user) {
-            list += `<li>` + user + ` <input type="button" style="float:right;"  value="Call" onclick="callUser('` + user + `')" id="makeCall" /></li>`
-        })
-        document.getElementById('users').innerHTML = list;
-    }
+    return window.RTCIceCandidate;
+  }
 
-    //To iron over browser implementation anomalies like prefixes
-    GetRTCPeerConnection();
-    GetRTCSessionDescription();
-    GetRTCIceCandidate();
-    prepareCaller();
-    function prepareCaller(){
-        //Initializing a peer connection
-        caller = new window.RTCPeerConnection();
-        //Listen for ICE Candidates and send them to remote peers
-        caller.onicecandidate = function(evt) {
-            if (!evt.candidate) return;
-            console.log("onicecandidate called");
-            onIceCandidate(caller, evt);
-        };
-        //onaddstream handler to receive remote feed and show in remoteview video element
-        caller.onaddstream = function(evt) {
-            console.log("onaddstream called");
-            if (window.URL) {
-                document.getElementById("remoteview").srcObject = evt.stream;
-            } else {
-                document.getElementById("remoteview").src = evt.stream;
-            }
-        };
-    }
-    function getCam() {
-      //Get local audio/video feed and show it in selfview video element
-        return navigator.mediaDevices.getUserMedia({
-            video: true,
-            audio: true
-        });
-    }
+  function GetRTCPeerConnection() {
+    window.RTCPeerConnection = window.RTCPeerConnection || window.webkitRTCPeerConnection ||
+      window.mozRTCPeerConnection || window.msRTCPeerConnection;
+    return window.RTCPeerConnection;
+  }
 
-    function GetRTCIceCandidate() {
-        window.RTCIceCandidate = window.RTCIceCandidate || window.webkitRTCIceCandidate ||
-            window.mozRTCIceCandidate || window.msRTCIceCandidate;
+  function GetRTCSessionDescription() {
+    window.RTCSessionDescription = window.RTCSessionDescription || window.webkitRTCSessionDescription ||
+      window.mozRTCSessionDescription || window.msRTCSessionDescription;
+    return window.RTCSessionDescription;
+  }
 
-        return window.RTCIceCandidate;
-    }
-
-    function GetRTCPeerConnection() {
-        window.RTCPeerConnection = window.RTCPeerConnection || window.webkitRTCPeerConnection ||
-            window.mozRTCPeerConnection || window.msRTCPeerConnection;
-        return window.RTCPeerConnection;
-    }
-
-    function GetRTCSessionDescription() {
-        window.RTCSessionDescription = window.RTCSessionDescription || window.webkitRTCSessionDescription ||
-            window.mozRTCSessionDescription || window.msRTCSessionDescription;
-        return window.RTCSessionDescription;
-    }
-
-    //Create and send offer to remote peer on button click
-    function callUser(user) {
-        getCam()
-            .then(stream => {
-              // if (window.URL) {
-              //     document.getElementById("selfview").src = window.URL.createObjectURL(stream);
-              // } else {
-              //     document.getElementById("selfview").srcObject = stream;
-              // }
+  //Create and send offer to remote peer on button click
+  function callUser(user) {
+    getCam()
+      .then(stream => {
+        // if (window.URL) {
+        //     document.getElementById("selfview").src = window.URL.createObjectURL(stream);
+        // } else {
+        //     document.getElementById("selfview").srcObject = stream;
+        // }
 
               if (window.URL) {
                 document.getElementById("selfview").srcObject = stream;
@@ -153,56 +157,55 @@
                 room = user;
               });
 
-            })
-            .catch(error => {
-                console.log('an error occured', error);
-            })
-    };
+      })
+      .catch(error => {
+        console.log('an error occured', error);
+      })
+  };
 
-    function endCall(){
-        room = undefined;
-        caller.close();
-        for (let track of localUserMedia.getTracks()) { track.stop() }
-        prepareCaller();
-        toggleEndCallButton();
-
+  function endCall() {
+    room = undefined;
+    caller.close();
+    for (let track of localUserMedia.getTracks()) {
+      track.stop()
     }
+    prepareCaller();
+    toggleEndCallButton();
 
-    function endCurrentCall(){
-        channel.trigger("client-endcall", {
-                "room": room
-            });
+  }
 
-        endCall();
+  function endCurrentCall() {
+    channel.trigger("client-endcall", {"room": room});
+    endCall();
+  }
+
+  //Send the ICE Candidate to the remote peer
+  function onIceCandidate(peer, evt) {
+    if (evt.candidate) {
+      channel.trigger("client-candidate", {
+        "candidate": evt.candidate,
+        "room": room
+      });
     }
+  }
 
-    //Send the ICE Candidate to the remote peer
-    function onIceCandidate(peer, evt) {
-        if (evt.candidate) {
-            channel.trigger("client-candidate", {
-                "candidate": evt.candidate,
-                "room": room
-            });
-        }
+  function toggleEndCallButton() {
+    if (document.getElementById("endCall").style.display == 'block') {
+      document.getElementById("endCall").style.display = 'none';
+    } else {
+      document.getElementById("endCall").style.display = 'block';
     }
+  }
 
-    function toggleEndCallButton(){
-        if(document.getElementById("endCall").style.display == 'block'){
-            document.getElementById("endCall").style.display = 'none';
-        }else{
-            document.getElementById("endCall").style.display = 'block';
-        }
+  //Listening for the candidate message from a peer sent from onicecandidate handler
+  channel.bind("client-candidate", function (msg) {
+    if (msg.room === room) {
+      console.log("candidate received");
+      caller.addIceCandidate(new RTCIceCandidate(msg.candidate));
     }
+  });
 
-    //Listening for the candidate message from a peer sent from onicecandidate handler
-    channel.bind("client-candidate", function(msg) {
-      if (msg.room === room) {
-        console.log("candidate received");
-        caller.addIceCandidate(new RTCIceCandidate(msg.candidate));
-      }
-    });
-
-    //Listening for Session Description Protocol message with session details from remote peer
+  //Listening for Session Description Protocol message with session details from remote peer
     channel.bind("client-sdp", function(msg) {
         if(msg.room == id) {
 
@@ -212,33 +215,34 @@
             return channel.trigger("client-reject", {"room": msg.room, "rejected": id});
           }
           room = msg.room;
+
           getCam()
             .then(stream => {
               localUserMedia = stream;
               toggleEndCallButton();
+
               if (window.URL) {
                 document.getElementById("selfview").srcObject = stream;
-                    } else {
-                        document.getElementById("selfview").src = stream;
-                    }
-                    caller.addStream(stream);
-                    var sessionDesc = new RTCSessionDescription(msg.sdp);
-                    caller.setRemoteDescription(sessionDesc);
-                    caller.createAnswer().then(function(sdp) {
-                        caller.setLocalDescription(new RTCSessionDescription(sdp));
-                        channel.trigger("client-answer", {
-                            "sdp": sdp,
-                            "room": room
-                        });
-                    });
+              } else {
+                document.getElementById("selfview").src = stream;
+              }
 
-                })
-                .catch(error => {
-                    console.log('an error occured', error);
-                })
+              caller.addStream(stream);
+              var sessionDesc = new RTCSessionDescription(msg.sdp);
+              caller.setRemoteDescription(sessionDesc);
+
+              caller.createAnswer().then(function (sdp) {
+                caller.setLocalDescription(new RTCSessionDescription(sdp));
+                channel.trigger("client-answer", {
+                  "sdp": sdp,
+                  "room": room
+                });
+              });
+
+            }).catch(error => {
+            console.log('an error occured', error);
+          })
         }
-
-
     });
 
     //Listening for answer to offer sent to remote peer
@@ -251,11 +255,12 @@
     });
 
     channel.bind("client-reject", function(answer) {
-        if(answer.room==room){
-            console.log("Call declined");
-            alert("call to " + answer.rejected + "was politely declined");
-            endCall();
-        }
+      // console.log(`answer: `, answer == room);
+      // if (answer.room == room) {
+      //   console.log("Call declined");
+      //   alert("call to " + answer.rejected + "was politely declined");
+      //   endCall();
+      // }
 
     });
 
